Add full Squidworks badge as trust seal on /vets

--- a/public/vets.html
+++ b/public/vets.html
@@ -62,6 +62,9 @@
 
     <div class="grid">
       <div class="card">
+        <div style="display:flex;justify-content:center;margin-bottom:10px">
+          <img src="/assets/squidworks-badge.png" alt="Squidworks AI" style="width:220px;max-width:100%;height:auto;opacity:.92" />
+        </div>
         <p style="margin-bottom:10px"><b>What you’ll get:</b></p>
         <ul>
           <li>A quick read on what AI can (and can’t) realistically do for your business</li>
