--- a/public/vets.html
+++ b/public/vets.html
@@ -22,6 +22,8 @@
     .nav{display:flex;align-items:center;justify-content:space-between;gap:16px}
     .brand{display:flex;align-items:center;gap:10px;font-weight:800;text-decoration:none}
     .dot{width:10px;height:10px;border-radius:999px;background:linear-gradient(135deg,var(--accent),var(--accent2)); box-shadow:0 0 22px rgba(61,231,255,.35)}
+    .logoMark{height:28px;width:auto;display:block}
+    .pillNav{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
     .kicker{display:inline-flex;align-items:center;gap:10px;font-size:12px;letter-spacing:.16em;text-transform:uppercase;color:rgba(234,240,255,.86);font-weight:800}
     .kicker .bar{width:16px;height:2px;background:linear-gradient(90deg,var(--accent),var(--accent2));border-radius:99px}
     h1{margin:18px 0 10px;font-size:36px;letter-spacing:-.02em}
@@ -49,8 +51,12 @@
 <body>
   <div class="wrap">
     <div class="nav">
-      <a class="brand" href="/"><span class="dot"></span> Squidworks AI</a>
-      <span class="pill">Veterans Forum</span>
+      <a class="brand" href="/"><img alt="Squidworks" src="/assets/squidworks-mark.png" class="logoMark" /> Squidworks AI</a>
+      <div class="pillNav">
+        <a href="/" class="btn" style="padding:10px 12px;border:1px solid var(--line);background:rgba(0,0,0,.15);border-radius:999px;font-weight:800">Home</a>
+        <a href="/voice.html" class="btn" style="padding:10px 12px;border:1px solid var(--line);background:rgba(0,0,0,.15);border-radius:999px;font-weight:800">Voice agents</a>
+        <span class="pill">Veterans Forum</span>
+      </div>
     </div>
 
     <div class="kicker" style="margin-top:16px"><span class="bar"></span> Calm clarity, not hype</div>
