--- a/public/voice.html
+++ b/public/voice.html
@@ -42,6 +42,7 @@
     .nav{display:flex;align-items:center;justify-content:space-between;gap:16px}
     .brand{display:flex;align-items:center;gap:10px;font-weight:800;letter-spacing:.2px}
     .brand .dot{width:10px;height:10px;border-radius:999px;background:linear-gradient(135deg,var(--accent),var(--accent2)); box-shadow:0 0 22px rgba(61,231,255,.35)}
+    .logoMark{height:28px;width:auto;display:block}
     .nav a{text-decoration:none}
 
     .pill{display:flex;gap:10px;align-items:center}
