Voice page: stack nav on mobile

--- a/public/voice.html
+++ b/public/voice.html
@@ -139,6 +139,12 @@
       .hero{grid-template-columns:1fr}
       .grid3{grid-template-columns:1fr}
       .split{grid-template-columns:1fr}
+
+      /* Mobile nav: stack like other pages */
+      .nav{flex-direction:column;align-items:flex-start}
+      .pill{width:100%;flex-wrap:wrap}
+      .btn{width:100%;justify-content:flex-start}
+      .btn.primary{justify-content:center}
     }
   </style>
 </head>
