Standardize nav across home/voice/vets

--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,12 @@
 
     @media(max-width:880px){.hero{grid-template-columns:1fr} h1{font-size:38px}}
     @media(max-width:740px){.grid3{grid-template-columns:1fr}}
+    @media(max-width:920px){
+      .nav{flex-direction:column;align-items:flex-start}
+      .pill{width:100%;flex-wrap:wrap}
+      .pill .btn{width:100%;justify-content:flex-start}
+      .pill .btn.primary{justify-content:center}
+    }
   </style>
 </head>
 <body>
