--- a/public/vets.html
+++ b/public/vets.html
@@ -23,7 +23,6 @@
     .brand{display:flex;align-items:center;gap:10px;font-weight:800;text-decoration:none}
     .dot{width:10px;height:10px;border-radius:999px;background:linear-gradient(135deg,var(--accent),var(--accent2)); box-shadow:0 0 22px rgba(61,231,255,.35)}
     .logoMark{height:28px;width:auto;display:block}
-    .pillNav{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
     .kicker{display:inline-flex;align-items:center;gap:10px;font-size:12px;letter-spacing:.16em;text-transform:uppercase;color:rgba(234,240,255,.86);font-weight:800}
     .kicker .bar{width:16px;height:2px;background:linear-gradient(90deg,var(--accent),var(--accent2));border-radius:99px}
     h1{margin:18px 0 10px;font-size:36px;letter-spacing:-.02em}
@@ -46,16 +45,17 @@
     .err{background:rgba(255,80,80,.08);border:1px solid rgba(255,80,80,.25)}
     ul{margin:10px 0 0 18px;color:rgba(184,196,230,.92);line-height:1.55}
     @media(max-width:820px){.grid{grid-template-columns:1fr}}
+    @media(max-width:920px){.nav{flex-direction:column;align-items:flex-start}.pill{width:100%;flex-wrap:wrap}.pill .btn{width:100%;justify-content:flex-start}.pill .btn.primary{justify-content:center}}
   </style>
 </head>
 <body>
   <div class="wrap">
     <div class="nav">
       <a class="brand" href="/"><img alt="Squidworks" src="/assets/squidworks-mark.png" class="logoMark" /> Squidworks AI</a>
-      <div class="pillNav">
-        <a href="/" class="btn" style="padding:10px 12px;border:1px solid var(--line);background:rgba(0,0,0,.15);border-radius:999px;font-weight:800">Home</a>
-        <a href="/voice.html" class="btn" style="padding:10px 12px;border:1px solid var(--line);background:rgba(0,0,0,.15);border-radius:999px;font-weight:800">Voice agents</a>
-        <span class="pill">Veterans Forum</span>
+      <div class="pill">
+        <a href="/" class="btn ghost">Home</a>
+        <a href="/voice.html" class="btn ghost">Voice agents</a>
+        <span class="btn ghost" style="cursor:default;opacity:.9">Vets</span>
       </div>
     </div>
 
